# ood-2023

lw1/: CMakeLists.txt  main.cpp
lw1/include/decorators/: ColorDecorator.h
lw1/include/shapes/: Rectangle.h  Triangle.h
lw1/src/decorators/: ColorDecorator.cpp
lw1/src/main/: ShapeReader.cpp
lw2/: CMakeLists.txt  main.cpp
lw2/include/main/: ShapeDrawer.h
lw2/include/shapes/: Circle.h  Shape.h
lw2/include/singletons/: CircleCreator.h  TriangleCreator.h
lw2/src/main/: ShapeReader.cpp
lw2/src/shapes/: Rectangle.cpp
lw2/src/singletons/: CircleCreator.cpp  RectangleCreator.cpp  TriangleCreator.cpp
lw3/: CMakeLists.txt  main.cpp
lw3/include/: AreaPerimeterPrinter.h  Circle.h  CircleCreator.h  ColorDecorator.h  Rectangle.h  RectangleCreator.h  Shape.h  ShapeDrawer.h  ShapeReader.h  ShapeVisitor.h  Triangle.h  TriangleCreator.h
lw3/include/decorators/: ColorDecorator.h
lw3/include/main/: ShapeReader.h
lw3/include/shapes/: Circle.h  Rectangle.h  Triangle.h
lw3/include/singletons/: CircleCreator.h  RectangleCreator.h  TriangleCreator.h
lw3/include/visitors/: AreaPerimeterPrinter.h  ShapeVisitor.h
lw3/src/: AreaPerimeterPrinter.cpp  Circle.cpp  CircleCreator.cpp  ColorDecorator.cpp  Rectangle.cpp  RectangleCreator.cpp  ShapeDrawer.cpp  ShapeReader.cpp  Triangle.cpp  TriangleCreator.cpp
lw3/src/decorators/: ColorDecorator.cpp
lw3/src/main/: ShapeDrawer.cpp
lw3/src/shapes/: Circle.cpp  Rectangle.cpp  Triangle.cpp
lw3/src/singletons/: CircleCreator.cpp  RectangleCreator.cpp
lw3/src/visitors/: AreaPerimeterPrinter.cpp
(+2 files in other folders)
